--- a/PythonMoora/management/hasil_akhir/templates/hasil_akhir/biologi.html
+++ b/PythonMoora/management/hasil_akhir/templates/hasil_akhir/biologi.html
@@ -18,7 +18,7 @@
     <div class="well">
 
      <div align="right">
-      <a href="{% url 'hasil_akhir:reporttbl' %}">
+      <a href="{% url 'hasil_akhir:reportdata_awal' %}">
        <button class="btn btn-info"><i class="fa fa-print"></i> Print</button>
      </a>
    </div>
@@ -63,7 +63,7 @@
   <div class="well">
 
    <div align="right">
-    <a href="{% url 'hasil_akhir:reporttbl' %}">
+    <a href="{% url 'hasil_akhir:report_ternormalisasi' %}">
      <button class="btn btn-info"><i class="fa fa-print"></i> Print</button>
    </a>
  </div>
@@ -84,12 +84,12 @@
     {% for c in ternormalisasi %}
     <tr>
       <td>{{forloop.counter}}</td>
-      <td>{{c.0}}</td>
-      <td>{{c.1}}</td>
-      <td>{{c.2}}</td>
-      <td>{{c.3}}</td>
-      <td>{{c.4}}</td>
-      <td>{{c.5}}</td>
+      <td align="left">{{c.0}}</td>
+      <td align="left">{{c.1}}</td>
+      <td align="left">{{c.2}}</td>
+      <td align="left">{{c.3}}</td>
+      <td align="left">{{c.4}}</td>
+      <td align="left">{{c.5}}</td>
     </tr>
     {% endfor %}
   </tbody>
@@ -108,7 +108,7 @@
   <div class="well">
 
    <div align="right">
-    <a href="{% url 'hasil_akhir:reporttbl' %}">
+    <a href="{% url 'hasil_akhir:report_pembobotan' %}">
      <button class="btn btn-info"><i class="fa fa-print"></i> Print</button>
    </a>
  </div>
@@ -129,12 +129,12 @@
     {% for c in pembobotan %}
     <tr>
       <td>{{forloop.counter}}</td>
-      <td>{{c.0}}</td>
-      <td>{{c.1}}</td>
-      <td>{{c.2}}</td>
-      <td>{{c.3}}</td>
-      <td>{{c.4}}</td>
-      <td>{{c.5}}</td>
+      <td align="left">{{c.0}}</td>
+      <td align="left">{{c.1}}</td>
+      <td align="left">{{c.2}}</td>
+      <td align="left">{{c.3}}</td>
+      <td align="left">{{c.4}}</td>
+      <td align="left">{{c.5}}</td>
     </tr>
     {% endfor %}
   </tbody>
@@ -153,7 +153,7 @@
   <div class="well">
 
    <div align="right">
-    <a href="{% url 'hasil_akhir:reporttbl' %}">
+    <a href="{% url 'hasil_akhir:report_rangking' %}">
      <button class="btn btn-info"><i class="fa fa-print"></i> Print</button>
    </a>
  </div>
@@ -171,11 +171,11 @@
 <tbody>
   {% for c in akhir %}
   <tr>
-    <td>{{forloop.counter}}</td>
-    <td>{{c.0}}</td>
-    <td>{{c.1}}</td>
-    <td>{{c.2}}</td>
-    <td>{{c.3}}</td>
+      <td>{{forloop.counter}}</td>
+      <td align="left">{{c.0}}</td>
+      <td align="left">{{c.1}}</td>
+      <td align="left">{{c.2}}</td>
+      <td align="left">{{c.3}}</td>
   </tr>
   {% endfor %}
 </tbody>
